[package]
name = "exnats_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
rust-ini = "0.17"
threadpool = "1.8.1"
crypto = { path = "../crypto" }
error = { path = "../error" }
hex = "0.4.3"
