[package]
name = "exnats_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
clap = "3.0.0-beta.5"
rust-ini = "0.17"
threadpool = "1.8.1"
crypto = { path = "../crypto" }
error = { path = "../error" }